# zsh-histdb-skim

./: Cargo.toml  zsh-histdb-skim.zsh
.github/workflows/: rust.yml
src/: history.rs  main.rs  query.rs  title.rs
